k8s/customer-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      containers:
      - name: customer-service
        image: visheshvishu/customer-service:latest
        ports:
        - containerPort: 8085
        command: ["/bin/sh", "-c"]
        args:
          - echo "Waiting 20s for dependencies..."; sleep 20; java -jar /app.jar
    
---
apiVersion: v1
kind: Service
metadata:
  name: custome-service
spec:
  selector:
    app: customer-service
  ports:
  - port: 8085
    targetPort: 8085
    nodePort: 30085
  type: NodePort
