k8s/eureka-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
      - name: eureka-server
        image: visheshvishu/eureka-server:latest  # Replace with your actual image
        ports:
        - containerPort: 8080
        command: ["/bin/sh", "-c"]
        args:
          - echo "Waiting 20s for dependencies..."; sleep 20;
            java -jar /app.jar
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
spec:
  selector:
    app: eureka-server
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30001  # You can choose any port between 30000–32767
