k8s/zuul-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zuul-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zuul-server
  template:
    metadata:
      labels:
        app: zuul-server
    spec:
      containers:
      - name: zuul-server
        image: visheshvishu/zuul-server:latest
        ports:
        - containerPort: 8083
        command: ["/bin/sh", "-c"]
        args:
          - echo "Waiting 20s for dependencies..."; sleep 20;
            java -jar /app.jar
---
apiVersion: v1
kind: Service
metadata:
  name: zuul-server
spec:
  selector:
    app: zuul-server
  ports:
  - port: 8083
    targetPort: 8083
    nodePort: 30003
  type: NodePort
