k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /admin(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: admin-server
            port:
              number: 8086
